syntax = "proto3";

option go_package = "proto/";

service Game {
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
  rpc Stream (stream Request) returns (stream Response) {}
}

message ConnectRequest {
  string name = 1;
}

message ConnectResponse {
  string id = 1;
  string token = 2;
  repeated Entity entities = 3;
}

message Request {
  oneof action {
    Position move = 1;
    AddEntity addEntity =2;
    RemoveEntity removeEntity = 3;
  }
}

message Response {
  oneof action {
    AddEntity addEntity = 1;
    UpdateEntity updateEntity = 2;
    RemoveEntity removeEntity = 3;
  }
}

message Position {
  float x = 1;
  float y = 2;
}

message Entity {
  string id = 1;
  string name = 2;
  Position position = 3;
  string type = 4;
  string colour = 5;

}
message AddEntity {
  Entity entity = 1;
}

message UpdateEntity {
  Entity entity = 1;
}

message RemoveEntity {
  string id = 1;
}